--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ example/public/star_wars.glb
 example/public/screen_space_reflections.blend1
 example/public/mk1.glb
 example/public/lago_disola_2k.hdr
+example/public/test.glb
