--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,8 @@
 	},
 	"dependencies": {
 		"detect-gpu": "^4.0.32",
-		"postprocessing": "^6.28.3",
+		"postprocessing": "^6.28.5",
+		"screen-space-reflections": "^2.1.2",
 		"stats.js": "^0.17.0",
 		"three": "^0.143.0",
 		"tweakpane": "^3.1.0"
