Improvements, fix ssr blending

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@ example/public/screen_space_reflections.blend1
 example/public/mk1.glb
 example/public/lago_disola_2k.hdr
 example/public/test.glb
+example/public/halo.glb
+example/public/brandenburger_tor.glb
