Add astronaut test

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,8 @@ example/public/lago_disola_2k.hdr
 example/public/test.glb
 example/public/halo.glb
 example/public/brandenburger_tor.glb
+example/public/astronaut.glb
+example/public/astronaut-low.glb
+example/public/hdr
+example/public/bike.glb
+example/public/low_poly.glb
