--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 		"eslint-plugin-jest": "^26.5.3",
 		"eslint-plugin-prettier": "^4.2.1",
 		"husky": ">=6",
-		"lint-staged": ">=10",
+		"lint-staged": "^13.2.2",
 		"prettier": "^2.7.1",
 		"rollup": "^3.17.2",
 		"rollup-plugin-glslify": "^1.3.0"
