--- a/example/package.json
+++ b/example/package.json
@@ -5,6 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite --host",
+		"start": "npm run dev",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
