--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"husky": ">=6",
 		"lint-staged": "^13.2.2",
 		"prettier": "^2.7.1",
-		"rollup": "^3.17.2",
+		"rollup": "^3.26.3",
 		"rollup-plugin-glslify": "^1.3.0"
 	},
 	"peerDependencies": {
@@ -77,5 +77,8 @@
 	"version": "1.1.1",
 	"lint-staged": {
 		"*.{js,css,md}": "prettier --write"
+	},
+	"dependencies": {
+		"stats-gl": "^1.0.4"
 	}
 }
