--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"husky": ">=6",
 		"lint-staged": "^13.2.2",
 		"prettier": "^2.7.1",
-		"rollup": "^3.26.3",
+		"rollup": "^2.79.1",
 		"rollup-plugin-glslify": "^1.3.0"
 	},
 	"peerDependencies": {
@@ -79,6 +79,7 @@
 		"*.{js,css,md}": "prettier --write"
 	},
 	"dependencies": {
-		"stats-gl": "^1.0.4"
+		"stats-gl": "^1.0.4",
+		"vite": "^4.4.9"
 	}
 }
