--- a/example/package.json
+++ b/example/package.json
@@ -23,7 +23,7 @@
 		"drag-drop": "^7.2.0",
 		"postprocessing": "^6.31.0",
 		"realism-effects": "^1.0.2",
-		"stats.js": "^0.17.0",
+		"stats-gl": "^1.0.4",
 		"three": "^0.152.2",
 		"tweakpane": "^3.1.0"
 	}
